added js-comments for swagger and chanded authenticate middleware
